Before redefining API.
